<resources>
    <string name="app_name">Handheld-Reader</string>

    <!-- inventorytag -->
    <string name="uhf_msg_inventory_stop_fail">Stop failure</string>
    <string name="uhf_msg_inventory_open_fail">Open failure</string>
    <string name="uhf_msg_inventory_fail">Inventory failure</string>
    <string name="uhf_msg_sdk_open_fail">SDK Scanner open failure!</string>
    <string name="rbInventorySingle">Single</string>
    <string name="rbInventoryLoop">Auto</string>
    <string name="btInventory">Start</string>
    <string name="title_stop_Inventory">Stop</string>
    <string name="tvTagUii">EPC</string>
    <string name="tvTagLen">Length</string>
    <string name="tvTagCount">Count</string>
    <string name="btClear">Clear</string>

    <!-- location -->
    <string name="start_location">Start locate</string>
    <string name="stop_location">Stop locate</string>
    <string name="location">Locating</string>
    <string name="location_fail">EPC is empty!</string>
    <string name="psam_msg_fail">failed</string>

    <!-- navigation -->
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="server_error">Server Error</string>

    <string name="borrow">Borrow</string>
    <string name="return_page">Return</string>
    <string name="device_list">Device List</string>
    <string name="find_device">Find Device</string>

    <!-- status -->
    <string name="Borrowed">Borrowed</string>
    <string name="InStorage">InStorage</string>
    <string name="Loss">Loss</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <!-- Settings -->
    <string name="normal_set">Common settings</string>
    <string name="uhf_title_power">Output Power：</string>
    <string name="uhf_btn_setpower">Set Power</string>
    <string name="uhf_btn_getpower">Get Power</string>
    <string name="uhf_title_dbm">dBm</string>
</resources>