<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/rectangle_bg"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_normal_set"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue1"
                android:padding="5dp"
                android:text="@string/normal_set"
                android:textSize="18sp" />


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingBottom="3dp"
                android:paddingTop="5dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/uhf_title_power"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/spPower"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:entries="@array/arrayPower"
                        android:gravity="center_horizontal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/uhf_title_dbm" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <Button
                        android:id="@+id/btnSetPower1"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/button_blue"
                        android:text="@string/uhf_btn_setpower"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/btnGetPower1"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_blue"
                        android:text="@string/uhf_btn_getpower"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>